@@ -214,6 +214,10 @@ PHP 8.3 UPGRADE NOTES
   . MIXED_NUMBERS (Spoofchecker).
   . HIDDEN_OVERLAY (Spoofchecker).
 
+- OpenSSL:
+  . OPENSSL_CMS_OLDMIMETYPE
+  . PKCS7_NOOLDMIMETYPE
+
 - PCNTL:
   . SIGINFO
 
